# Uni.GUI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: cpm-imgui-filebrowser.cmake  cpm-imgui-implot.cmake  cpm-imgui-imspinner.cmake  cpm-imgui-node-editor.cmake  cpm-imgui-notify.cmake  cpm-imgui.cmake  cpm-sdl3.cmake  cpm.cmake
src/: CMakeLists.txt  ui_app.cpp  ui_app.h  ui_callbacks.h  ui_element.h  ui_extra.h  ui_font.cpp  ui_font.h  ui_main.cpp  ui_renderer.h  ui_renderer_sdl.cpp  ui_renderer_sdl.h  ui_renderer_sdlgpu.cpp  ui_renderer_sdlgpu.h  ui_renderer_vulkan.cpp  ui_renderer_vulkan.h  ui_state.h  ui_std.cpp  ui_std.h  ui_texture.cpp  ui_texture.h  ui_texture_registry.cpp  ui_texture_registry.h  ui_winsys.h  ui_winsys_sdl.cpp  ui_winsys_sdl.h
src_demo/: CMakeLists.txt  main.cpp  window_demo.cpp  window_demo.h
src_gui/: CMakeLists.txt  main.cpp  window_demo.cpp  window_demo.h
